# onnxinfo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
docker/: CMakeLists.txt  Dockerfile  Dockerfile.dockerignore
docker/original/: CMakeLists.txt  Dockerfile
include/: AttrInfo.hpp  InferShape.hpp  ModelAnalysis.hpp  utils.hpp
src/: InferShape.cpp  ModelAnalysis.cpp  main.cpp  pybind.cpp  utils.cpp
tests/: test_onnxinfo.py
